Fix position of search button
Change the top/right values of the position so it is positioned at the bottom right. Won't overlap with cancel button

--- a/projectpage/css/main.css
+++ b/projectpage/css/main.css
@@ -2027,15 +2027,15 @@ button::-moz-focus-inner, input::-moz-focus-inner {
     border: none;
     cursor: pointer;
     width: 2rem;
-    height: 1.5rem;
+    height: 2rem;
     min-height: 2rem;
     padding: 0;
     margin: 0;
     -webkit-transform: translate3d(0, -50%, 0);
     transform: translate3d(0, -50%, 0);
     position: absolute;
-    top: 50%;
-    right: 7rem;
+    top: 75px;
+    right: 30px;
 } 
 
 @media screen and (max-width: 600px) {
@@ -2056,8 +2056,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
         -webkit-transform: translate3d(0, -50%, 0);
         transform: translate3d(0, -50%, 0);
         position: absolute;
-        top: 50%;
-        left: 17rem;
+        top: 75px;
+        right: 0px;
     } 
 }
 
@@ -2079,8 +2079,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {
         -webkit-transform: translate3d(0, -50%, 0);
         transform: translate3d(0, -50%, 0);
         position: absolute;
-        top: 50%;
-        right: 4rem;
+        top: 75px;
+        right: 30px;
     } 
 }
 
